fix: searching tracks no longer fails due to an offset too large

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -16,6 +16,7 @@
 
     text-transform: capitalize;
     font-size: xx-large;
+    user-select: none;
 }
 
 .card:hover {
